--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 
-# Created by https://www.gitignore.io/api/swift,xcode,macos,objective-c
+# Created by https://www.gitignore.io/api/macos,swift,xcode,carthage,objective-c
+
+### Carthage ###
+# Carthage
+#
+# Add this line if you want to avoid checking in source code from Carthage dependencies.
+# Carthage/Checkouts
+
+Carthage/Build
 
 ### macOS ###
 *.DS_Store
@@ -85,22 +93,6 @@ iOSInjectionProject/
 
 ### Objective-C Patch ###
 
-### Objective-C.Carthage Stack ###
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build
-
-### Objective-C.CocoaPods Stack ###
-## CocoaPods GitIgnore Template
-
-# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
-#           - Also handy if you have a lage number of dependant pods
-#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGONRE THE LOCK FILE
-# Pods/
-
 ### Swift ###
 # Xcode
 #
@@ -137,20 +129,6 @@ playground.xcworkspace
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
 
-### Swift.CocoaPods Stack ###
-## CocoaPods GitIgnore Template
-
-# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
-#           - Also handy if you have a lage number of dependant pods
-#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGONRE THE LOCK FILE
-
-### Swift.Carthage Stack ###
-# Carthage
-#
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-
 ### Xcode ###
 # Xcode
 #
@@ -169,4 +147,5 @@ playground.xcworkspace
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
-# End of https://www.gitignore.io/api/swift,xcode,macos,objective-c
+
+# End of https://www.gitignore.io/api/macos,swift,xcode,carthage,objective-c
