use new storage.

--- a/TinyKit.xcodeproj/xcshareddata/xcschemes/TinyKit iOS.xcscheme
+++ b/TinyKit.xcodeproj/xcshareddata/xcschemes/TinyKit iOS.xcscheme
@@ -8,10 +8,24 @@
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B05D4F631F1E0D9D00929006"
+               BuildableName = "TinyCore.framework"
+               BlueprintName = "TinyCore iOS"
+               ReferencedContainer = "container:tiny-core/TinyCore.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B00B9EDC21551792006CAD5A"
