--- a/TinyKit.xcodeproj/xcshareddata/xcschemes/TinyKit iOS.xcscheme
+++ b/TinyKit.xcodeproj/xcshareddata/xcschemes/TinyKit iOS.xcscheme
@@ -28,10 +28,10 @@
             buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B00B9EDC21551792006CAD5A"
-               BuildableName = "TinyStorage.framework"
-               BlueprintName = "TinyStorage iOS"
-               ReferencedContainer = "container:tiny-storage/TinyStorage.xcodeproj">
+               BlueprintIdentifier = "B063818F21450513004BC4DC"
+               BuildableName = "TinyValidation.framework"
+               BlueprintName = "TinyValidation iOS"
+               ReferencedContainer = "container:tiny-validation/TinyValidation.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
